<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" android:gravity="center_horizontal"
    tools:context=".activity_login">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in" android:fontFamily="@font/matthan_sans_regular"
        android:textSize="60sp" android:textAllCaps="true"
        android:textAlignment="center" android:layout_marginTop="80dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:backgroundTint="#FFFF"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:backgroundTint="#FFFF"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cooperhewitt_medium"
        android:text="@string/forgot_password"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:layout_marginStart="90dp"
        android:textColor="#72FFFFFF" />

    <com.eufinitywellness.android.CustomElements.EufinityThemeButton
        android:id="@+id/enter"
        android:layout_width="200dp" app:buttonText="ENTER"
        android:layout_height="50dp" android:layout_marginTop="30dp"/>


</LinearLayout>